fix(ui): EmptySet - add spacing

--- a/packages/ui/src/ui/empty-set/empty-set.module.css
+++ b/packages/ui/src/ui/empty-set/empty-set.module.css
@@ -1,5 +1,5 @@
-.text {
-  margin-bottom: 0;
+.root {
+  color: var(--color-text-light);
 }
 
 .action {
